Set mobile banner to full width, fix banner text on mobile.

--- a/includes/custom.css
+++ b/includes/custom.css
@@ -321,7 +321,10 @@
 		}
 		header {
 		    margin-top: 0 !important;
-		}			
+		}		
+		.hero-mobile {
+			width: 100%;
+		}	
 	}
 
 	@media (min-width:501px) and (max-width: 767px){
@@ -347,8 +350,18 @@
 	}
 
 	@media (max-width: 500px){
-        font-size: 15px !important;
-        letter-spacing: 0;
+		.hero-mobile {
+			width: 100%;
+		}
+		h2.banner-text {
+		    position: absolute;
+		    top: 10%;
+		    text-align: center !important;
+		    font-size: 15px;
+		    letter-spacing: 0;
+		    line-height: 24px;
+		    padding: 0 10px;
+		}		
     }
 
 
